# xpilotAI

./: .gitignore  README.md
dumbo/: .Dumbo.c.swp  CMakeLists.txt  Dumbo  Dumbo.c  build.sh  run.sh
fuzzy/: Fuzzy  Fuzzy.c  build.sh  cma_best.json  es.ckpt  fuzzy.py  run.sh  run2.sh
ga/: GA  checkpoint  checkpoint-100  checkpoint-1000  checkpoint-200  checkpoint-300  checkpoint-400  checkpoint-500  checkpoint-600  checkpoint-700  checkpoint-800  checkpoint-900  ga.c
ga_bot/: GASmarty.c  Smarty.c  build.sh  build_evaluator.sh  build_ga.sh  checkpoint  evaluator_test.c  ga.c  ga.db-shm  ga.db-wal
nn/: NN  mlp.c  mlp.h  mlp_print.c  mlp_print.h  nn.c  perceptron.c
nnPilot/: MLP  MLPRecord  MLPTrain  build.sh  build_recorder.sh  build_trainer.sh  mlpPilot.c  model-lr0.000000-decay0.990000-epoch1000.save  model-lr0.000000-decay0.990000-epoch1500.save  model-lr0.000000-decay0.990000-epoch2000.save  model-lr0.000000-decay0.992000-epoch1000.save  model-lr0.000000-decay0.992000-epoch1500.save  model-lr0.000000-decay0.992000-epoch2000.save  model-lr0.000000-decay0.995000-epoch1500.save  model-lr0.000000-decay0.995000-epoch2000.save  model-lr0.000001-decay0.997000-epoch2000.save  model-lr0.000002-decay0.997000-epoch2000.save  model-lr0.000004-decay0.997000-epoch2000.save  model-lr0.000005-decay0.997000-epoch2000.save  model-lr0.000012-decay0.997000-epoch1500.save  model-lr0.000032-decay0.990000-epoch500.save  model-lr0.000033-decay0.995000-epoch1000.save  model-lr0.000037-decay0.997000-epoch1500.save  model-lr0.000085-decay0.997000-epoch1500.save  model-lr0.000091-decay0.997000-epoch1500.save  (+31 more)
smarty/: .Smarty.c.swp  (+5 more)
(+12 files in other folders)
